adding a new Maybe string for calendar attendance for now

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">لا تسأل مرة أخرى في هذه الدورة</string>
     <string name="yes">نعم</string>
     <string name="no">كلا</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">WARNING: You are deleting %d folder</item>
