--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Bu oturumda birdə soruşma</string>
     <string name="yes">Bəli</string>
     <string name="no">Xeyr</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">WARNING: You are deleting %d folder</item>
