--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -256,6 +256,7 @@
     <string name="do_not_ask_again">Peidio â gofyn eto yn y sesiwn hon</string>
     <string name="yes">Ydw</string>
     <string name="no">Nac ydw</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">RHYBUDD: Rwyt am ddileu %d ffolder</item>
