--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Älä kysy uudestaan tällä istunnolla</string>
     <string name="yes">Poista</string>
     <string name="no">Peruuta</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">WARNING: You are deleting %d folder</item>
