--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -248,6 +248,7 @@
     <string name="do_not_ask_again">Ne plus demander pour cette session</string>
     <string name="yes">Oui</string>
     <string name="no">Non</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">ATTENTION : Vous supprimez %d dossier</item>
