--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -249,6 +249,7 @@
     <string name="do_not_ask_again">Ne pitaj me više u ovoj sesiji</string>
     <string name="yes">Da</string>
     <string name="no">Ne</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">UPOZORENJE: Brišete %d mapu</item>
