--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -245,6 +245,7 @@
     <string name="do_not_ask_again">Ne mutassa újra ebben a menetben</string>
     <string name="yes">Igen</string>
     <string name="no">Nem</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">FIGYELEM: Törli %d mappát!</item>
