--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -243,6 +243,7 @@
     <string name="do_not_ask_again">Jangan tanya lagi untuk sesi ini</string>
     <string name="yes">Ya</string>
     <string name="no">Tidak</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="other">PERHATIAN: Anda akan menghapus folder %d</item>
