--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Não perguntar mais para esta sessão</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">AVISO: está prestes a apagar %d pasta</item>
