--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -249,6 +249,7 @@
     <string name="do_not_ask_again">Nepýtať sa už v tomto spustení</string>
     <string name="yes">Áno</string>
     <string name="no">Nie</string>
+    <string name="maybe">Možno</string>
 
     <plurals name="delete_warning">
         <item quantity="one">UPOZORNENIE: Chystáte sa vymazať %d priečinok</item>
