--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -251,6 +251,7 @@
     <string name="do_not_ask_again">To sejo ne sprašuj več</string>
     <string name="yes">Da</string>
     <string name="no">Ne</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">OPOZORILO: Brišete %d mapo</item>
