--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Bu oturumda tekrar sorma</string>
     <string name="yes">Evet</string>
     <string name="no">Hayır</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">UYARI: %d klasör siliyorsunuz</item>
