--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -243,6 +243,7 @@
     <string name="do_not_ask_again">這情況不再詢問</string>
     <string name="yes">是</string>
     <string name="no">否</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="other">注意: 你正在刪除%d個資料夾</item>
