--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Spørg ikke igen i denne session</string>
     <string name="yes">Ja</string>
     <string name="no">Nej</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">ADVARSEL: Du sletter en mappe</item>
