--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Μην ξαναερωτηθώ αυτήν την περίοδο</string>
     <string name="yes">Ναί</string>
     <string name="no">Όχι</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">Προειδοποίηση: Διαγράφετε %d φάκελο</item>
