--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Non preguntar de novo en esta sesión</string>
     <string name="yes">Sí</string>
     <string name="no">No</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">WARNING: You are deleting %d folder</item>
