--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -243,6 +243,7 @@
     <string name="do_not_ask_again">다시 물어보지 않음</string>
     <string name="yes">네</string>
     <string name="no">아니요</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="other">WARNING: You are deleting %d folders</item>
