--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Більше не питати у цій сесії</string>
     <string name="yes">Так</string>
     <string name="no">Ні</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">УВАГА: Ви видаляєте %d теку</item>
