--- a/commons/src/main/res/values/strings.xml
+++ b/commons/src/main/res/values/strings.xml
@@ -246,6 +246,7 @@
     <string name="do_not_ask_again">Do not ask again in this session</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="maybe">Maybe</string>
 
     <plurals name="delete_warning">
         <item quantity="one">WARNING: You are deleting %d folder</item>
