--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -23,6 +23,8 @@
     <string name="transparent_color">Lliw tryloyw</string>
     <string name="select_a_different_color">Dewis lliw gwahanol</string>
     <string name="download">Lawrlwytho</string>
+    <string name="notification">Notification</string>
+    <string name="email">Email</string>
 
     <!-- Favorites -->
     <string name="favorites">Ffefrynnau</string>
