--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -246,7 +246,7 @@
     <string name="do_not_ask_again">No tornar a preguntar en aquesta sessió</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
-    <string name="maybe">Maybe</string>
+    <string name="maybe">Pot ser</string>
 
     <plurals name="delete_warning">
         <item quantity="one">ADVERTIMENT: s\'eliminarà %d carpeta</item>
