--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -23,8 +23,8 @@
     <string name="transparent_color">Cor transparente</string>
     <string name="select_a_different_color">Selecione uma cor diferente</string>
     <string name="download">Descarregar</string>
-    <string name="notification">Notification</string>
-    <string name="email">Email</string>
+    <string name="notification">Notificação</string>
+    <string name="email">E-mail</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
@@ -220,7 +220,7 @@
     <string name="empty_and_disable_recycle_bin">Esvaziar e desativar a reciclagem</string>
     <string name="undo">Desfazer</string>
     <string name="redo">Refazer</string>
-    <string name="print">Print</string>
+    <string name="print">Imprimir</string>
 
     <!-- Sorting -->
     <string name="sort_by">Ordenar por</string>
@@ -246,7 +246,7 @@
     <string name="do_not_ask_again">Não perguntar mais para esta sessão</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
-    <string name="maybe">Maybe</string>
+    <string name="maybe">Talvez</string>
 
     <plurals name="delete_warning">
         <item quantity="one">AVISO: está prestes a apagar %d pasta</item>
@@ -325,20 +325,20 @@
         <item quantity="other">%d horas</item>
     </plurals>
     <plurals name="in_days">
-        <item quantity="one">%d day</item>
-        <item quantity="other">%d days</item>
+        <item quantity="one">%d dia</item>
+        <item quantity="other">%d dias</item>
     </plurals>
     <plurals name="in_weeks">
-        <item quantity="one">%d week</item>
-        <item quantity="other">%d weeks</item>
+        <item quantity="one">%d semana</item>
+        <item quantity="other">%d semanas</item>
     </plurals>
     <plurals name="in_months">
-        <item quantity="one">%d month</item>
-        <item quantity="other">%d months</item>
+        <item quantity="one">%d mês</item>
+        <item quantity="other">%d meses</item>
     </plurals>
     <plurals name="in_years">
-        <item quantity="one">%d year</item>
-        <item quantity="other">%d years</item>
+        <item quantity="one">%d ano</item>
+        <item quantity="other">%d anos</item>
     </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
@@ -359,16 +359,16 @@
         <item quantity="other">%d dias antes</item>
     </plurals>
     <plurals name="weeks_before">
-        <item quantity="one">%d week before</item>
-        <item quantity="other">%d weeks before</item>
+        <item quantity="one">%d semana antes</item>
+        <item quantity="other">%d semanas antes</item>
     </plurals>
     <plurals name="months_before">
-        <item quantity="one">%d month before</item>
-        <item quantity="other">%d months before</item>
+        <item quantity="one">%d mês antes</item>
+        <item quantity="other">%d meses antes</item>
     </plurals>
     <plurals name="years_before">
-        <item quantity="one">%d year before</item>
-        <item quantity="other">%d years before</item>
+        <item quantity="one">%d ano antes</item>
+        <item quantity="other">%d anos antes</item>
     </plurals>
 
     <!-- For example: Postpone reminder by 3 minutes -->
@@ -385,20 +385,20 @@
         <item quantity="other">%d horas</item>
     </plurals>
     <plurals name="by_days">
-        <item quantity="one">%d day</item>
-        <item quantity="other">%d days</item>
+        <item quantity="one">%d dia</item>
+        <item quantity="other">%d dias</item>
     </plurals>
     <plurals name="by_weeks">
-        <item quantity="one">%d week</item>
-        <item quantity="other">%d weeks</item>
+        <item quantity="one">%d semana</item>
+        <item quantity="other">%d semanas</item>
     </plurals>
     <plurals name="by_months">
-        <item quantity="one">%d month</item>
-        <item quantity="other">%d months</item>
+        <item quantity="one">%d mês</item>
+        <item quantity="other">%d meses</item>
     </plurals>
     <plurals name="by_years">
-        <item quantity="one">%d year</item>
-        <item quantity="other">%d years</item>
+        <item quantity="one">%d ano</item>
+        <item quantity="other">%d anos</item>
     </plurals>
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
@@ -440,7 +440,7 @@
     <string name="skip_delete_confirmation">Ignorar sempre a confirmação para eliminação de ficheiros</string>
     <string name="enable_pull_to_refresh">Ativar pull-to-refresh</string>
     <string name="use_24_hour_time_format">Utilizar formato 24 horas</string>
-    <string name="change_date_and_time_format">Change date and time format</string>
+    <string name="change_date_and_time_format">Alterar formato da data/hora</string>
     <string name="sunday_first">Iniciar semana ao domingo</string>
     <string name="widgets">Widgets</string>
     <string name="use_same_snooze">Usar sempre o mesmo intervalo para snooze</string>
@@ -475,8 +475,8 @@
     <string name="empty_recycle_bin_confirmation">Tem a certeza de que deseja esvaziar a reciclagem? Todos os itens serão apagados permanentemente.</string>
     <string name="recycle_bin_empty">A reciclagem está vazia</string>
     <string name="moving_recycle_bin_items_disabled">Não é possível mover itens para fora da Reciclagem, utilize a opção Restaurar</string>
-    <string name="show_the_recycle_bin">Show the Recycle Bin</string>
-    <string name="hide_the_recycle_bin">Hide the Recycle Bin</string>
+    <string name="show_the_recycle_bin">Mostrar reciclagem</string>
+    <string name="hide_the_recycle_bin">Ocultar reciclagem</string>
 
     <plurals name="moving_items_into_bin">
         <item quantity="one">A mover %d item para a reciclagem</item>
@@ -587,7 +587,7 @@
     </string>
     <string name="purchase">Comprar</string>
     <string name="update_thank_you">Por favor atualize a aplicação Simple Thank You para a versão mais recente</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
+    <string name="before_asking_question_read_faq">Antes de colocar uma questão, verifique as FAQ. Pode ser que a solução esteja lá.</string>
     <string name="read_it">Ler</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
