--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -558,7 +558,7 @@
     <string name="it_is_free">Είναι δωρεάν μέχρι: %s. Εάν κάνετε λήψη μέχρι τότε, θα μπορείτε να την χρησιμοποιείτε δωρεάν για πάντα.</string>
     <string name="more_info">Περισσότερα</string>
     <string name="upgrade">Αναβάθμιση</string>
-    <string name="upgrade_calendar">Πρέπει να μεταφέρετε τοπικά αποθηκευμένα συμβάντα χειροκίνητα μέσω της εξαγωγής σε ένα αρχείο .ics, στη συνέχεια, εισαγωγή. Μπορείτε να βρείτε τα κουμπιά εξαγωγής/εισαγωγής στο μενού της κύριας οθόνης.</string>
+    <string name="upgrade_calendar">Πρέπει να μεταφέρετε τα αποθηκευμένα τοπικά συμβάντα χειροκίνητα, μέσω Εξαγωγής σε αρχείο .ics και στη συνέχεια Εισαγωγή. Μπορείτε να βρείτε τις επιλογές Εξαγωγής/Εισαγωγής, στο μενού της κύριας οθόνης.</string>
 
     <!-- About -->
     <string name="about">Σχετικά</string>
