--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -686,4 +686,8 @@
     <string name="sanselan_title">Apache Sanselan (čítanie metadát obrázkov)</string>
     <string name="filters_title">Android Photo Filters (filtre obrázkov)</string>
     <string name="gesture_views_title">Gesture Views (priblížiteľné obrázky)</string>
+
+    <!-- Google Play listing -->
+    <string name="deprecated_app">ZASTARALÁ: Táto verzia aplikácie už nie je podporovaná. Stiahnite si Pro verziu na https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
+    <string name="pro_app_refund">Nezabudnite, že ak odinštalujete platenú verziu do 2 hodín, peniaze vám budú automaticky vrátené. Ak ich budete chcieť späť hocikedy neskôr, len nám dajte vedieť na hello@simplemobiletools.com. To vám zabezpečí jednoduchý spôsob na ich vyskúšanie :)</string>
 </resources>
