--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="ok">OK</string>
-    <string name="cancel">Скасувавти</string>
+    <string name="cancel">Скасувати</string>
     <string name="save_as">Зберегти як</string>
     <string name="file_saved">Файл успішно збережено</string>
     <string name="invalid_file_format">Недопустимий формат файлу</string>
